# AGenNext-WebCrawl

./: AGENTS.md  CHANGELOG.md  COOLIFY.md  Dockerfile  README.md  SPEC.md  config_production.py  coolify.yaml  docker-compose.yaml  docker-compose.yml  index.html  pyproject.toml  requirements.txt  version.py
.github/workflows/: build-push.yml  cd.yml  deploy-gcp.yml  test.yml
components/: navigation.py  seo_meta.py  social_share.py
crawler_agent/: __init__.py  agent.py  agent_tools.py  config.py  gcp_helper.py  graph.py  nodes.py  rag.py  self_improve.py  skills.py  state.py  tools.py
crawler_agent/billing/: __init__.py  credits.py  plans.py  usage.py
crawler_agent/crawlers/: __init__.py  crawl4ai.py  firecrawl.py
docs/: SECRETS_SETUP.md
examples/: app.py  example_usage.py
examples/.streamlit/: config.toml
examples/pages/: 0_chat.py  1_crawler_dashboard.py  2_billing_dashboard.py  3_account_settings.py  4_login.py  5_changelog.py  6_howto.py  7_pricing.py  8_faq.py  landing.py
scripts/: crawler-agent.service
tests/: conftest.py  test_app.py
