[project]
name = "crawler-agent"
version = "0.1.0"
description = "Web Crawling Agent using LangGraph SDK with Firecrawl and Crawl4AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openhands-sdk>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "firecrawl-py>=1.0.0",
    "crawl4ai>=0.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "streamlit>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]